# python-mpy-cross-multi

./: .gitignore  .gitmodules  pyproject.toml
.github/workflows/: publish-v5.yml  publish-v6.1.yml  publish-v6.2.yml  publish-v6.3.yml  publish-v6.yml  publish.yml
mpy_cross_multi/: __init__.py
projects/mpy-cross-v5/: pyproject.toml
projects/mpy-cross-v5/tests/: test_mpy_cross.py
projects/mpy-cross-v6/: pyproject.toml
projects/mpy-cross-v6.1/: pyproject.toml
projects/mpy-cross-v6.1/tests/: test_mpy_cross.py
projects/mpy-cross-v6.2/: pyproject.toml
projects/mpy-cross-v6.2/tests/: test_mpy_cross.py
projects/mpy-cross-v6.3/: README.md  pyproject.toml
projects/mpy-cross-v6.3/tests/: test_mpy_cross.py
projects/mpy-cross-v6/tests/: test_mpy_cross.py
