[project]
name = "mpy-cross-multi"
version = "2.0.0"
description = "MicroPython cross-compiler targeting multiple runtime versions."
authors = [{ name = "David Lechner", email = "david@pybricks.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "mpy-cross-v5>=1.1.0",
    "mpy-cross-v6>=1.1.0",
    "mpy-cross-v6.1>=1.0.1",
    "mpy-cross-v6.2>=1.0.0",
    "mpy-cross-v6.3>=1.0.0",
    "semver>=3.0.2",
]

[project.urls]
Homepage = "https://github.com/pybricks/python-mpy-cross-multi"

[project.scripts]
mpy-cross-multi = "mpy_cross_multi.__main__:_run"

[dependency-groups]
dev = ["ruff>=0.12.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
