[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpy-cross-v6.1"
version = "1.1.2"
description = "Python wrapper for the mpy-cross tool from MicroPython."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
"mpy-cross-v6.1" = "mpy_cross_v6_1:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mpy_cross_v6_1 = ["mpy-cross*"]

[tool.pytest.ini_options]
pythonpath = ["build/lib"]
norecursedirs = ["micropython/*"]

[tool.black]
extend-exclude = "micropython"

[tool.cibuildwheel]
build = "cp313-*"
test-requires = "pytest"
test-command = "pytest {project}/projects/mpy-cross-v6.1/tests"
