[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpy-cross-v6"
version = "1.1.1"
description = "Python wrapper for the mpy-cross tool from MicroPython."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
"mpy-cross-v6" = "mpy_cross_v6:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mpy_cross_v6 = ["mpy-cross*"]

[tool.pytest.ini_options]
pythonpath = ["build/lib"]
norecursedirs = ["micropython/*"]

[tool.black]
extend-exclude = "micropython"

[tool.cibuildwheel]
build = "cp313-*"
test-requires = "pytest"
test-command = "pytest {project}/projects/mpy-cross-v6/tests"
